GL/Projet_GL/src/test/deca/codegen/interactif/valid/readFLoat.deca
// Description:
//    Lecture d'un float et affichage avec addition.
//
// Resultats:
//    Pas d'erreur. Le programme lit un float y et affiche y + 1.

{
    float y = readFloat() ;
    println(y + 1) ;
}